tests/ui/g-dynamic-policy-unsupported-control.stderr
error[E0599]: no method named `policy` found for struct `Program<hibana::g::Send<Role<0>, Role<0>, Msg<124, (), PolicyAnnotateKind>>>` in the current scope
  --> tests/ui/g-dynamic-policy-unsupported-control.rs:57:6
   |
47 |       let program = g::send::<
   |  ___________________-
48 | |         Role<0>,
49 | |         Role<0>,
50 | |         Msg<
...  |
56 | |     >()
57 | |     .policy::<7>();
   | |     -^^^^^^ method not found in `Program<hibana::g::Send<Role<0>, Role<0>, Msg<124, (), PolicyAnnotateKind>>>`
   | |_____|
   |
   |
   = note: the method was found for
           - `Program<hibana::g::Send<Controller, Controller, Msg<LOGICAL_LABEL, (), LoopBreakKind>, LANE>>`
           - `Program<hibana::g::Send<Controller, Controller, Msg<LOGICAL_LABEL, (), LoopContinueKind>, LANE>>`
           - `Program<hibana::g::Send<Controller, Controller, Msg<LOGICAL_LABEL, (), RouteDecisionKind>, LANE>>`
